# bilibili-follow-manager

./: .gitignore  README.md  pyproject.toml
bili_manager/: __init__.py  __main__.py  api_http.py  app.py  app_webview.py  theme.py
bili_manager/api/: account.py  client.py  following.py  unfollow.py
bili_manager/auth/: login.py
bili_manager/db/: database.py
bili_manager/gui/: main_window.py
bili_manager/pages/: __init__.py  base.py  export.py  fetch.py  filter.py  followers.py  review.py  scheduler.py  tags.py  unfollow.py
bili_manager/rules/: engine.py
bili_manager/utils/: helpers.py
config/: default_rules.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: FetchPage.tsx  FilterPage.tsx  ReviewPage.tsx  UnfollowPage.tsx
tests/: test_integration.py
