[project]
name = "bili-manager"
version = "0.1.0"
description = "Bilibili Follow Manager — 关注列表分析与清理工具"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "N818",   # error-suffix-on-exception-name
    "RUF001", # ambiguous unicode string (Chinese UI text)
    "RUF003", # ambiguous unicode comment (Chinese comments)
    "B027",   # empty abstract methods (intentional hooks)
    "N806",   # non-lowercase variable (constants in function scope OK)
]

[tool.ruff.lint.isort]
known-first-party = ["bili_manager"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disable_error_code = [
    "no-any-return",       # json() returns Any, expected in API client
    "func-returns-value",  # Tkinter void-method-in-lambda-list pattern
    "misc",                # lambda type inference in Tkinter callbacks
    "method-assign",       # Tk widget attribute override (self.client)
    "call-arg",            # Tkinter configure(state=...) type mismatch
    "call-overload",       # Tkinter configure() overload complexity
    "assignment",          # Tk widget attribute conflict (self.client = None)
]

[[tool.mypy.overrides]]
module = [
    "tkinter.*",
    "PIL.*",
    "qrcode.*",
    "requests.*",
]
ignore_missing_imports = true
